package es.etg.daw.prog.mercadaw.model.bbdd;

public enum Database {
    ORACLE_XE, MOCK
}
