package es.etg.daw.prog.mercadaw.model.exception;

public class LectorException extends MercaDAWException{
    
}
