package es.etg.daw.prog.mercadaw.model.exception;

public class MercaDAWException extends Exception {
    
}
