package es.etg.daw.prog.mercadaw.model.util.export;

public enum Exportable {
    PDF,EXCEL
}

