package es.etg.daw.prog.mercadaw.model.util.export;

public interface ExportableUtil {

  public byte[] crearFichero(Documento documento) throws Exception;  
} 
