package es.etg.daw.prog.mercadaw.model.util.export;

public class PDFUtil extends Util{
    public byte[] crearFichero(Documento documento) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'crearFichero'");
    }
}
