package es.etg.daw.prog.mercadaw.model.util.input;

/**
 * Esta interface nos permite leer un fichero de forma binaria.
 * @author: Iván Rafael Redondo
 */
public interface Fichero {

  public byte[] leer(String fichero);
} 
