package es.etg.daw.prog.mercadaw.model.util.input;

public class FicheroMock implements Fichero{

    @Override
    public byte[] leer(String fichero) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'leer'");
    }

    

    
    
}