package es.etg.daw.prog.mercadaw.model.util.reader;

public class LectorJSON {
    
}
