@startuml bbdd
    package model{
        package bbdd{
            enum Database{
                ORACLE XE, MOCK
            }
            interface MercaDAO{
            + crearTablaEmpleado()
            + crearTablaProducto()
            + insertar(Empleado empleado)
            + insertar(Producto producto)
            + actualizar(Empleado empleado)
            + actualizar(Producto producto)
            + borrar(Empleado empleado)
            + borrar(Producto producto)
            + visualizarProductos():List<Producto>
            + visualizarEmpleados():List<Empleado>
            }

            class MercadoDBFactory{
                {static} obtener(d:database): MercaDAO
            }

            abstract MercaDAOImp {
                  # connection: Connection
               
                
            }

            class MercaDAOImpMock{

            }

            class MercaDAOImpOracleXE{
              
            }
       
        }
           
    }

    MercaDAOImp <|-- MercaDAOImpOracleXE
    MercaDAOImp..|> MercaDAO
    MercaDAOImpMock..|> MercaDAO 
    
@enduml


@startuml fichero

    package model{
        package input{
            enum Formato{
                BINARIO, MOCK
            }

            class FicheroFactory{
                {static} + obtenerFicheroBinario():Fichero
            }

            class FicheroMock{

            }

            class FicheroBinario{

            }

            abstract FicheroImp{

            }

            interface Fichero{
                + leer(): byte[] 
                
            }
        }
    }

     FicheroImp <|-- FicheroBinario 
     FicheroMock ..|> Fichero 
     FicheroImp ..|> Fichero
@enduml

@startuml Lector
    package model{
        package reader{
            enum Formato{
                CSV, JSON, XML, MOCK
            }

            class LectorCSV{

            }

            class LectorJSON{

            }

            class LectorXML{

            }

            class LectorMock{

            }

            abstract LectorImp{
                + cargar(file:File):String
            }

            interface Lector{
                + leer(file:File):String
            }


            class LectorFactory{
               + {static} obtener(f:Formato):Lector
            }



        }
    }
        LectorImp <|-- LectorCSV
        LectorImp <|-- LectorJSON
        LectorImp <|-- LectorXML
        LectorImp ..|> Lector
        LectorMock ..|> Lector
@enduml


@startuml exception
set separator none

class Exception{

}

package es.etg.daw.prog.mercadaw.model.exception{
    

    class MercaDAWException{

    }

    class FicheroException{

    }
    
    class LectorException{

    }

    class FormatoException{

    }

    class BBDDException{

    }

    class ExportException{

    }
}




Exception <|-- MercaDAWException 
    MercaDAWException <|-- LectorException
        LectorException <|--FormatoException
    MercaDAWException <|-- FicheroException
    MercaDAWException <|-- ExportException
    MercaDAWException <|-- BBDDException


@enduml 


@startuml export
set separator none
package es.etg.daw.prog.mercadaw.model.util.export{
    
    enum Exportable{
        PDF, EXCEL, OTRO
    }

    class PDFUtil{

    }

    class ExcelUtil{

    }

    abstract Util{
        + crearFichero(exportable:Exportable): byte[]
    }

    interface ExportableUtil{
        + crearFichero(exportable:Exportable): byte[]
    }

    class DocumentoFactory{
       {static} obtenerExport(tipo:Tipo): Exportable
    }

    interface Documento{
        + getContenido:Map<String, Object[]>
        + getTitulo():String
        + getPie():String
    }
}

package es.etg.daw.prog.mercadaw.model.entity{
    class MercaDAW
}




Util <|-- PDFUtil
Util <|-- ExcelUtil
ExportableUtil <|.. Util 
Documento <|.. MercaDAW

@enduml

@startuml MercaDAW

package model{

    package producto{
        enum TipoProducto{
            ALIMENTACION, DROGUERIA, COSMETICA 
        }

        class ProductoFactory{
            {static} obtenerProducto(TipoProducto:TipoProducto):IProducto
        }

        interface IProducible{

        }


    }

    package empleado{
        enum TipoEmpleado{
            REPONEDOR, CAJERO, ENCARGADO
        }

        class EmpleadoFactory{
            {static} obtenerEmpleado(TipoEmpleado:TipoEmpleado):IEmpleado
        }

        interface IEmpleado{

        }


    }
}
@enduml